squashing bugs

--- a/dev/sass/_gallery.scss
+++ b/dev/sass/_gallery.scss
@@ -52,11 +52,16 @@
   max-height: 100%; /* pay attention to this!! */
   max-width: 100%;
 }
+
+.illustration {
+  position: relative; // for mobile (matching pageContainer so images align properly)
+  width: 100%;
+}
 .leftHero,
 .illustration,
 .book {
   @include tablet {
-    position: absolute; /* relative to .artContainer */
+    position: absolute; /* relative to .artContainer for split design */
     top: 50%;
     transform: translateY(-50%);
     visibility: hidden;
@@ -76,8 +81,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.35);
+    height: 75%;
+    background-color: transparent;
   }
 }
 .illustration img,
@@ -103,6 +108,7 @@
 }
 .illustration img,
 .pageContainer img {
+  margin: 0 auto; // prevents image warp on mobile
   max-height: 100%;
   max-width: 100%;
 }
@@ -140,6 +146,7 @@
   }
 }
 .leftTextContent { /* art text */
+  margin: 0 auto;
   padding: 1rem 0 0;
   max-width: 32rem;
   @include tablet {
