--- a/public/css/css.css
+++ b/public/css/css.css
@@ -836,12 +836,16 @@ footer {
   /* pay attention to this!! */
   max-width: 100%; }
 
+.illustration {
+  position: relative;
+  width: 100%; }
+
 @media screen and (min-width: 769px) {
   .leftHero,
   .illustration,
   .book {
     position: absolute;
-    /* relative to .artContainer */
+    /* relative to .artContainer for split design */
     top: 50%;
     transform: translateY(-50%);
     visibility: hidden;
@@ -860,8 +864,8 @@ footer {
       align-items: center;
       justify-content: center;
       width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.35); } }
+      height: 75%;
+      background-color: transparent; } }
 
 .illustration img,
 .pageContainer img,
@@ -883,6 +887,7 @@ footer {
 
 .illustration img,
 .pageContainer img {
+  margin: 0 auto;
   max-height: 100%;
   max-width: 100%; }
 
@@ -913,6 +918,7 @@ footer {
 
 .leftTextContent {
   /* art text */
+  margin: 0 auto;
   padding: 1rem 0 0;
   max-width: 32rem; }
   @media screen and (min-width: 769px) {
